Fix button alignment

--- a/statics/landing_page/assets/css/main.css
+++ b/statics/landing_page/assets/css/main.css
@@ -2471,6 +2471,7 @@ input, select, textarea {
 		cursor: default;
 		list-style: none;
 		margin-left: -1em;
+		margin-right: 7em;
 		padding-left: 0;
 	}
 
